--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -5,20 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24sp"
+    android:background="@color/sports_white"
     tools:context=".ui.events.EventFragment"
     android:orientation="vertical"
     android:layout_gravity="center"
     >
 
-    <com.google.android.material.button.MaterialButton
+    <androidx.appcompat.widget.AppCompatButton
 
         android:id="@+id/btn_create_event"
-        style="@style/Widget.Material3.Button.IconButton.Filled"
+        android:background="@drawable/create_button_bg"
+
         android:layout_width="200dp"
         android:layout_height="64sp"
         android:enabled="true"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:text="@string/create_new"
+        android:textSize="20dp"
         android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
         app:icon="@drawable/baseline_add_24"
         app:iconGravity="textStart"
@@ -29,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@color/white"
         android:text="@string/headline_3"
         android:textAlignment="textStart"
         android:textSize="20sp"
@@ -46,6 +51,7 @@
             android:id="@+id/edti_text_game"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:text="@string/initial_game"
             android:labelFor="@id/edti_text_game"
             />
@@ -55,6 +61,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/events_recycler_view"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
