--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,17 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
+    android:background="@color/sports_red"
+
     app:startDestination="@+id/navigation_home">
 
     <fragment
+
         android:id="@+id/navigation_home"
         android:name="com.sigma.sportsup.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
+
         android:id="@+id/navigation_search"
-        android:name="com.sigma.sportsup.ui.search.SearchFragment"
+        android:name="com.sigma.sportsup.ui.chatting.ChatFragment"
         android:label="@string/title_search"
         tools:layout="@layout/fragment_search" />
 
