--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -2,18 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginBottom="16dp"
+
+
+    android:background="@color/sports_white"
+
     android:orientation="vertical">
+
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/filledTextField2"
         style="?attr/textInputOutlinedStyle"
         android:layout_width="match_parent"
+        android:background="@color/sports_yellow"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="40dp"
         android:hint="@string/enter_phone_number"
         android:paddingTop="16dp"
         android:paddingBottom="16dp">
@@ -21,8 +25,10 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPhone"
             android:ems="10"
+            android:layout_marginHorizontal="20dp"
+            android:background="@color/sports_yellow"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="80dp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -31,20 +37,28 @@
         style="?attr/textInputOutlinedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@color/sports_yellow"
         android:hint="@string/enter_favorite_sports"
         android:paddingTop="16dp"
         android:paddingBottom="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etSportsList"
+            android:background="@color/sports_yellow"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_marginHorizontal="20dp"
+            android:layout_height="80dp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="@color/sports_red"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/save"
