--- a/app/src/main/res/layout/event_comment_item.xml
+++ b/app/src/main/res/layout/event_comment_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/sports_yellow"
     android:layout_height="wrap_content"
     android:padding="12sp"
     >
