--- a/app/src/main/res/layout/event_recyclerview_item.xml
+++ b/app/src/main/res/layout/event_recyclerview_item.xml
@@ -7,6 +7,7 @@
     app:cardCornerRadius="12sp"
     android:clickable="true"
     android:focusable="true"
+
     android:layout_margin="12sp"
     style="?attr/materialCardViewFilledStyle"
     >
@@ -14,6 +15,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/sports_yellow"
         android:orientation="horizontal">
 
         <!-- Media -->
