--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,34 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginBottom="16dp"
+
+    android:background="@color/sports_white"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivProfilePic"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="210dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="36dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/tvName"
+        android:layout_marginTop="26dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/sports_yellow"
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/white"
         android:padding="8dp"
         android:textSize="18sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <TextView
         android:id="@+id/tvAge"
+        android:layout_marginTop="26dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/sports_yellow"
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/white"
         android:padding="8dp"
         android:textSize="18sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
@@ -38,6 +44,10 @@
         android:id="@+id/tvPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:background="@color/sports_yellow"
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/white"
         android:padding="8dp"
         android:textSize="18sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
@@ -46,25 +56,33 @@
         android:id="@+id/tvSportsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:background="@color/sports_yellow"
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/white"
         android:padding="8dp"
         android:textSize="18sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
+        android:layout_marginTop="26dp"
         android:layout_height="wrap_content"
+        android:background="@color/sports_red"
+        android:textColor="@color/white"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
         android:text="@string/edit_profile"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
+        android:background="@color/sports_red"
+        android:textColor="@color/white"
+        android:layout_marginTop="26dp"
         android:text="@string/log_out"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
 
