--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/sports_red"
+
+    >
 
     <item
         android:id="@+id/chat_menu"
+        android:background="@color/sports_red"
+
         android:title="Chat"
         app:showAsAction="always"
         android:icon="@drawable/baseline_chat_24"
