--- a/app/src/main/res/layout/event_recyclerview_item.xml
+++ b/app/src/main/res/layout/event_recyclerview_item.xml
@@ -37,10 +37,10 @@
                 android:id="@+id/event_game"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/dm_sans_bold"
                 android:text="Title"
-                android:textAppearance="?attr/textAppearanceDisplayMedium"
-                android:textSize="18sp"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="18sp" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -113,6 +113,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/dm_sans_bold"
                 android:text="@string/event_players"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="?android:attr/colorPrimary"
