--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -16,24 +16,27 @@
         style="@style/Widget.Material3.Button.IconButton.Filled"
         android:layout_width="200dp"
         android:layout_height="64sp"
-        android:enabled="true"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:enabled="true"
         android:text="@string/create_new"
         android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
+        android:textSize="16sp"
         app:icon="@drawable/baseline_add_24"
         app:iconGravity="textStart"
-        app:iconPadding="8sp"
-       />
+        app:iconPadding="8sp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8sp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8sp"
+        android:fontFamily="@font/dm_sans_bold"
         android:text="@string/headline_3"
         android:textAlignment="textStart"
-        android:textSize="20sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="20sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
