--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="2dp">
 
 
     <ImageView
         android:id="@+id/avatar"
+        android:layout_width="51dp"
+        android:layout_height="73dp"
         android:layout_marginLeft="15dp"
-        android:layout_width="65dp"
-        android:layout_height="75dp"
-        android:src="@drawable/avatar"/>
+        android:src="@drawable/avatar" />
 
     <TextView
         android:id="@+id/txt_name"
@@ -40,7 +41,7 @@
         android:layout_height="1dp"
         android:layout_below="@+id/txt_name"
         android:layout_marginTop="5dp"
-        android:background="@color/white" />
+        android:background="@color/chat_back" />
 
 
 </RelativeLayout>
